cmake_minimum_required(VERSION 3.26)
project(tema_poo)

set(CMAKE_CXX_STANDARD 17)

add_executable(tema_poo main.cpp
        Personaj.cpp
        Personaj.h
        Obiect.cpp
        Obiect.h
        Locatie.cpp
        Locatie.h
        Joc.cpp
        Joc.h
        Entitate.h
        MyExceptions.h
        poo_project/Joc.cpp
        poo_project/Locatie.cpp
        poo_project/main.cpp
        poo_project/Obiect.cpp
        poo_project/Personaj.cpp
        poo_project/class.cpp
        clasa.cpp
        clasa.h)
